--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.0",
+    "@react-icons/all-files": "^4.1.0",
     "firebase": "^11.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
